# simpl_energy

./: Cargo.toml  README.md  energy_consumption_profile.json  output.text  test.json
src/: battery_usage_plan.rs  electricity_prices.rs  energy.rs  energy_consumption.rs  main.rs  optimization_plan.rs  pkg.rs
