[package]
name = "simpl_energy_assessment"
version = "0.1.0"
edition = "2021"
authors = ["adeoye adefemi"]
description = "Simpl Energy software engineering techical assessment"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
